@@ -110,6 +110,33 @@ cmd_system_description(struct lldpctl_conn_t *conn, struct writer *w,
 }
 
 static int
+cmd_system_chassisid(struct lldpctl_conn_t *conn, struct writer *w,
+    struct cmd_env *env, void *arg)
+{
+	const char *value;
+	value = cmdenv_get(env, "description");
+	log_debug("lldpctl", "set chassis ID");
+	lldpctl_atom_t *config = lldpctl_get_configuration(conn);
+	if (config == NULL) {
+		log_warnx("lldpctl", "unable to get configuration from lldpd. %s",
+		    lldpctl_last_strerror(conn));
+		return 0;
+	}
+	if (lldpctl_atom_set_str(config,
+	    lldpctl_k_config_cid_string,
+	    value) == NULL) {
+		log_warnx("lldpctl", "unable to set chassis ID. %s",
+		    lldpctl_last_strerror(conn));
+		lldpctl_atom_dec_ref(config);
+		return 0;
+	}
+	log_info("lldpctl", "chassis ID set to new value %s",
+	    value?value:"(none)");
+	lldpctl_atom_dec_ref(config);
+	return 1;
+}
+
+static int
 cmd_management(struct lldpctl_conn_t *conn, struct writer *w,
     struct cmd_env *env, void *arg)
 {
@@ -336,6 +363,22 @@ register_commands_configure_system(struct cmd_node *configure,
 		    NULL, NULL, NULL),
 		NEWLINE, "Don't override chassis description",
 		NULL, cmd_system_description, "system");
+
+	commands_new(
+		commands_new(
+			commands_new(configure_system,
+			    "chassisid", "Override chassis ID",
+			    NULL, NULL, NULL),
+			NULL, "Chassis ID",
+			NULL, cmd_store_env_value, "description"),
+		NEWLINE, "Override chassis ID",
+		NULL, cmd_system_chassisid, "system");
+	commands_new(
+		commands_new(unconfigure_system,
+		    "chassisid", "Don't override chassis ID",
+		    NULL, NULL, NULL),
+		NEWLINE, "Don't override chassis ID",
+		NULL, cmd_system_chassisid, "system");
 
 	commands_new(
 		commands_new(
