@@ -665,7 +665,7 @@ typedef enum {
 	lldpctl_k_config_iface_promisc,  /**< `(I,WO)` Enable or disable promiscuous mode on interfaces */
 	lldpctl_k_config_chassis_cap_advertise, /**< `(I,WO)` Enable or disable chassis capabilities advertisement */
 	lldpctl_k_config_chassis_mgmt_advertise, /**< `(I,WO)` Enable or disable management addresses advertisement */
-	lldpctl_k_config_cid_string,    /**< `(S)` User defined string for the chassis ID */
+	lldpctl_k_config_cid_string,    /**< `(S,WON)` User defined string for the chassis ID */
 
 	lldpctl_k_interface_name = 1000, /**< `(S)` The interface name. */
 
